crates/au-cli/tests/it/snapshots/it__scenarios__marked-fence-with-block-id.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 3,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 32,
                        "line_col": {
                          "end": {
                            "col": 33,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/marked-fence-with-block-id/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "marked-fence-with-block-id"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "marked-fence-with-block-id"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/marked-fence-with-block-id/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "assumption",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/marked-fence-with-block-id/type/decision.type.yaml",
                "required": false,
                "shape": "assumption&"
              }
            ],
            "required": false,
            "shape": "assumption&"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/marked-fence-with-block-id/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 112,
                        "line_col": {
                          "end": {
                            "col": 54,
                            "line": 4
                          },
                          "start": {
                            "col": 13,
                            "line": 4
                          }
                        },
                        "start": 71
                      },
                      "file": "<root>/scenarios/marked-fence-with-block-id/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "anchor": null,
                      "block_id": {
                        "id": "extractor-stability",
                        "referent": true
                      },
                      "kind": "reference",
                      "target": "research-notes"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": {
                    "id": "extractor-stability",
                    "referent": true
                  },
                  "kind": "reference",
                  "target": "research-notes"
                }
              }
            ],
            "field": "assumption"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/marked-fence-with-block-id/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/marked-fence-with-block-id/decision.md",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 89,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 78
            },
            "text": "Findings"
          },
          {
            "body": "type: assumption\ndescription: \"Extractor protocol is stable through Q3\"\nconfidence: medium\n",
            "info": "yaml [:assumptions]",
            "kind": "fenced_block",
            "span": {
              "end": 229,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 15
                },
                "start": {
                  "col": 1,
                  "line": 9
                }
              },
              "start": 90
            },
            "trailing_block_id": "extractor-stability"
          }
        ],
        "claim": [
          "note"
        ],
        "closure": [
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "assumptions",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/marked-fence-with-block-id/type/note.type.yaml",
                "required": false,
                "shape": "assumption&[]"
              }
            ],
            "required": false,
            "shape": "assumption&[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/marked-fence-with-block-id/type/note.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 229,
                        "line_col": {
                          "end": {
                            "col": 1,
                            "line": 15
                          },
                          "start": {
                            "col": 1,
                            "line": 9
                          }
                        },
                        "start": 90
                      },
                      "file": "<root>/scenarios/marked-fence-with-block-id/research-notes.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Findings"
                      }
                    ],
                    "surface": "body_fence",
                    "value": {
                      "fields": [
                        {
                          "field": "confidence",
                          "values": [
                            {
                              "kind": "scalar",
                              "value": "medium"
                            }
                          ]
                        },
                        {
                          "field": "description",
                          "values": [
                            {
                              "kind": "scalar",
                              "value": "Extractor protocol is stable through Q3"
                            }
                          ]
                        }
                      ],
                      "kind": "inline_record"
                    }
                  }
                ],
                "value": {
                  "fields": [
                    {
                      "field": "confidence",
                      "values": [
                        {
                          "kind": "scalar",
                          "value": "medium"
                        }
                      ]
                    },
                    {
                      "field": "description",
                      "values": [
                        {
                          "kind": "scalar",
                          "value": "Extractor protocol is stable through Q3"
                        }
                      ]
                    }
                  ],
                  "kind": "inline_record"
                }
              }
            ],
            "field": "assumptions"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 59,
                        "line_col": {
                          "end": {
                            "col": 45,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/marked-fence-with-block-id/research-notes.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Notes from extractor research"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Notes from extractor research"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/marked-fence-with-block-id/research-notes.md",
        "section_presence": null
      }
    ]
  }
}
