crates/au-cli/tests/it/snapshots/it__scenarios__meta-block-clean.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 22,
                        "line_col": {
                          "end": {
                            "col": 23,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/meta-block-clean/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "meta-block-clean"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "meta-block-clean"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/meta-block-clean/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 172,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 164
            },
            "text": "Hello"
          },
          {
            "content": "note",
            "kind": "inline_code",
            "span": {
              "end": 183,
              "line_col": {
                "end": {
                  "col": 11,
                  "line": 8
                },
                "start": {
                  "col": 5,
                  "line": 8
                }
              },
              "start": 177
            }
          },
          {
            "content": "display-meta",
            "kind": "inline_code",
            "span": {
              "end": 217,
              "line_col": {
                "end": {
                  "col": 45,
                  "line": 8
                },
                "start": {
                  "col": 31,
                  "line": 8
                }
              },
              "start": 203
            }
          },
          {
            "content": "display-meta",
            "kind": "inline_code",
            "span": {
              "end": 361,
              "line_col": {
                "end": {
                  "col": 189,
                  "line": 8
                },
                "start": {
                  "col": 175,
                  "line": 8
                }
              },
              "start": 347
            }
          }
        ],
        "claim": [
          "note"
        ],
        "closure": [
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/meta-block-clean/type/note.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 158,
                        "line_col": {
                          "end": {
                            "col": 144,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/meta-block-clean/hello.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "An instance of note. The display-meta block is type-level metadata on note itself — it doesn't flow into instance frontmatter."
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "An instance of note. The display-meta block is type-level metadata on note itself — it doesn't flow into instance frontmatter."
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/meta-block-clean/hello.md",
        "section_presence": null
      }
    ]
  }
}
